[package]
authors = ["Robert Hurst <rhurst@e-xact.com>"]
description = "Unison is a easy to use config loader which can collect configuration from flags, environment variables, and configuration files."
documentation = "https://docs.rs/unison"
homepage = "https://github.com/RobertWHurst/Unison"
license = "MIT"
name = "unison"
repository = "https://github.com/RobertWHurst/Unison"
version = "0.3.2"

[dependencies]
failure = "0.1.1"
