[package]
name = "unison"
description = "Unison is a easy to use config loader which can collect configuration from flags, environment variables, and configuration files."
version = "1.0.0"
edition = "2018"
authors = ["Robert Hurst <rhurst@e-xact.com>"]
repository = "https://github.com/RobertWHurst/Unison"
documentation = "https://docs.rs/unison"
homepage = "https://github.com/RobertWHurst/Unison"
license = "MIT"

[dependencies]
